Bug 430910 - Thai Language settings cause (audio) Rendering failure for a Thai user
Summary: Thai Language settings cause (audio) Rendering failure for a Thai user
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.4.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL: https://invent.kde.org/graphics/krita...
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-28 17:48 UTC by Ahab Greybeard
Modified: 2021-06-14 10:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Thai-Failed_log_encode.log (15.08 KB, text/x-log)
2020-12-28 17:49 UTC, Ahab Greybeard
Details
Thai-User-Thai-Settings (26.86 KB, image/png)
2020-12-28 17:50 UTC, Ahab Greybeard
Details
Ahab-Thai-Settings.png (71.83 KB, image/png)
2020-12-28 17:51 UTC, Ahab Greybeard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2020-12-28 17:48:35 UTC
SUMMARY
This is from a user report here:
https://krita-artists.org/t/could-not-render-animation-unknown-error/16129

A Thai user had animation rendering failure when the animation had an audio track on it.
This is with krita version 4.4.1 on Windows 10 using the recommended gyan ffmpeg.
This seems to have happened because krita used Thai characters as input parameters to ffmpeg.

The problem was fixed when the user switched the application language to English.

DETAILED DESCRIPTION
The Thai user's failed rendering log is attached as Thai-Failed_log_encode.log

The failure point says:

Applying option ss (set the start time offset) with argument ๐:๐:๐.๐๐๐.
Invalid duration specification for ss: ๐:๐:๐.๐๐๐

Note the Thai numeric characters.

The problem starts at the begining with the ffmpeg input parameter values:

Reading option '-ss' ... matched as option 'ss' (set the start time offset) with argument '๐:๐:๐.๐๐๐'.
Reading option '-t' ... matched as option 't' (record or transcode "duration" seconds of audio/video) with argument '๐:๐:๒๑.๐๐๐'.
Reading option '-i' ... matched as input url with argument 'C:/Users/User/Downloads/AT-cm_981096862.mp3'.

Those inputs are only present if Rendering is done with an audio track.

When the Thai user switched the application language to English, the animation with audio rendered correctly.


OBSERVED RESULT
See Detailed Description and Additional Information

EXPECTED RESULT
The numeric values passed to ffmpeg should use 'standard' characters.


ADDITIONAL INFORMATION
There is a complication that I don't understand, as follows:

The Thai user Performance settings show the following, as an example:
See attachment 'Thai-User-Thai-Settings.png'
Note that numeric values use Thai characters but text does not.

If I switch my application language from English to Thai:
See attachment 'Ahab-Thai-Settings.png'
I have some text in Thai characters but numeric values are English/Western.

This difference may be due to Windows system level language, or installed language character sets or the fact that I did this on a Linux system with the 4.4.1 appimage.
Comment 1 Ahab Greybeard 2020-12-28 17:49:14 UTC
Created attachment 134369 [details]
Thai-Failed_log_encode.log
Comment 2 Ahab Greybeard 2020-12-28 17:50:14 UTC
Created attachment 134370 [details]
Thai-User-Thai-Settings
Comment 3 Ahab Greybeard 2020-12-28 17:51:03 UTC
Created attachment 134371 [details]
Ahab-Thai-Settings.png
Comment 4 lolipk 2020-12-28 19:31:48 UTC
I agreed with the bug report form. Now the animation rendering is working well and no issue, the animation render out both the pictures sources and the audio itself too. The problem is solved
Comment 5 Ahab Greybeard 2020-12-28 20:03:13 UTC
@lolipk: You local situation is now better but I believe that the problemm still exists and has not been solved.
Comment 6 lolipk 2020-12-29 02:39:52 UTC
I confirmed the bug report statement
Comment 7 Ahab Greybeard 2021-02-17 13:19:22 UTC
Further information/example:

A user here: https://krita-artists.org/t/rendering-with-audio-results-to-error/18874 had the same problem with non-standard characters for the start offset and duration values passed to ffmepeg.

Their krita settings were English but their Windows system level settings were not.
After changing the Windows level settings to English and restarting their laptop, there was no problem rendering with an audio file.
Comment 8 Dmitry Kazakov 2021-06-14 10:26:17 UTC
Git commit 3649c3472860fbfe0cd3a5c2be9b8463a02ceaa5 by Dmitry Kazakov, on behalf of Alvin Wong.
Committed on 14/06/2021 at 10:23.
Pushed by dkazakov into branch 'master'.

Fix video export wrongly using localized toString on QTime

M  +3    -3    libs/ui/animation/KisVideoSaver.cpp

https://invent.kde.org/graphics/krita/commit/3649c3472860fbfe0cd3a5c2be9b8463a02ceaa5