Fix video export wrongly using localized toString on QTime

BUG: 430910